--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,9 +29,7 @@
 
 body {
   padding: 16px;
-  background-color: #cde8f0;
-  height: 100vh;
-}
+   }
 
 a {
   text-decoration: none;
@@ -56,7 +54,12 @@ ol {
 }
 
 
-
+.container{
+  display: flex;
+  flex-direction: column;
+ margin: 0 auto;
+ align-items: center;
+}
 
 form {
   display: flex;
@@ -168,14 +171,12 @@ button:hover {
   letter-spacing: 0.48px;
 }
 
-
-/* Loader styles */
 .loader {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 8px solid #f3f3f3;
+  border: 8px solid #1a0808;
   border-top: 8px solid #3498db;
   border-radius: 50%;
   width: 60px;
@@ -188,6 +189,39 @@ button:hover {
     transform: rotate(0deg);
   }
 
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.load-more{
+width: 150px;
+padding: 8px 26px;
+margin-top: 20px;
+position: relative;
+}
+
+.loader-btn {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  width: 18px;
+  height: 18px;
+  margin: -10px 0 0 -10px;
+  border: 3px solid #ccc;
+  border-top:3px solid #333;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+ }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
     transform: rotate(360deg);
   }
